<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/main_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_titulo"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_curso"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_disciplina"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_ano"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_autores"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechar"
        android:textColor="@color/white"
        android:background="@drawable/orange_button_background"
        android:layout_marginTop="16dp"/>

</LinearLayout>